--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release latest Docker Images
+name: Deploy New Docker Image Tags
 
 on:
   workflow_dispatch:
@@ -6,20 +6,52 @@ on:
     - cron: '0 0 1 1/3 *'
   
 jobs:
-  update:
+  check-for-latest:
     runs-on: ubuntu-latest
+    outputs:
+      newVersion: ${{ steps.new-version.outputs.LATEST_VERSION }}
+      hasNewVersion: ${{ steps.new-version.outputs.LATEST_VERSION != steps.current-version.outputs.CURRENT_VERSION }}
     steps:
-    - uses: actions/checkout@3
+    - uses: actions/checkout@v3
+    - name: Get new version number
+      id: new-version
+      run: echo "LATEST_VERSION=$(./get_latest_release_version.sh)" | tee -a $GITHUB_OUTPUT
+    - name: Get current version
+      id: current-version
+      run: echo "CURRENT_VERSION=$(cat Dockerfile | sed -n -E 's/.*frp_version=([0-9.-]+)/\1/p')" | tee -a $GITHUB_OUTPUT
+  update:
+    needs: check-for-latest
+    if: ${{ needs.check-for-latest.outputs.hasNewVersion }}
+    env:
+      CACHE_KEY: docker-release-client-${{ github.run_id }}
+    runs-on: ubuntu-latest 
+    steps:
+    - uses: actions/checkout@v3
     - name: Update Dockerfile
       run: make release
-    - name: Store new version
-      run: echo "FOOBAR_TEST=something" | tee -a $GITHUB_ENV
-    # - name: Git Auto Commit
-    #   uses: stefanzweifel/git-auto-commit-action@v4.16.0
-    #   with:
-    #     commit_message: 
+    - name: Cache changes for testing
+      uses: actions/cache@v3
+      with:
+        path: ./*
+        key: ${{ env.CACHE_KEY }}
+    - name: Test changes
+      id: build-test
+      uses: ./.github/workflows/test.yml
+      with:
+        cache-key: ${{ env.CACHE_KEY }}
+      secrets:
+        DOCKER_HUB_ACCESS: ${{ secrets.DOCKER_HUB_ACCESS }}
+    - name: Git Auto Commit
+      if: ${{ success()  }}
+      uses: stefanzweifel/git-auto-commit-action@v4.16.0
+      with:
+        commit_message: 'Latest'
   deploy:
+    needs: [check-for-latest, update]
+    if: ${{ needs.check-for-latest.outputs.hasNewVersion }}
     runs-on: ubuntu-latest
     steps:
-      - name: Testing
-        run: echo ${{ env.FOOBAR_TEST }}
+      - name: Push New Tags
+        run: |
+          docker push sethicis/frp-docker:latest
+          docker push sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
