--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,6 @@ on:
   schedule:
     - cron: '0 0 1 1/3 *'
 
-env:
-  CACHE_KEY: docker-release-client-${{ github.run_id }}
-
 jobs:
   check-for-latest:
     runs-on: ubuntu-latest
@@ -25,7 +22,11 @@ jobs:
   update:
     needs: check-for-latest
     if: ${{ needs.check-for-latest.outputs.hasNewVersion }}
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
+    env:
+      CACHE_KEY: docker-release-client-${{ github.run_id }}
+    outputs:
+      CACHE_KEY: ${{ env.CACHE_KEY }}
     steps:
     - uses: actions/checkout@v3
     - name: Update Dockerfile
@@ -39,9 +40,8 @@ jobs:
     needs: [update]
     uses: ./.github/workflows/test.yml
     with:
-      cache-key: ${{ env.CACHE_KEY }}
-    secrets:
-      DOCKER_HUB_ACCESS: ${{ secrets.DOCKER_HUB_ACCESS }}
+      cache-key: ${{ needs.update.outputs.CACHE_KEY }}
+    secrets: inherit
   commit-changes:
     needs: [validate-build, update]
     runs-on: ubuntu-latest
