--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,6 @@ on:
   schedule:
     - cron: '0 0 1 1/3 *'
 
-env:
-  CACHE_KEY: docker-release-client-${{ github.run_id }}
-
 jobs:
   check-for-latest:
     runs-on: ubuntu-latest
@@ -22,48 +19,26 @@ jobs:
     - name: Get current version
       id: current-version
       run: echo "CURRENT_VERSION=$(cat Dockerfile | sed -n -E 's/.*frp_version=([0-9.-]+)/\1/p')" | tee -a $GITHUB_OUTPUT
-  update:
+  update-and-deploy:
     needs: check-for-latest
     if: ${{ needs.check-for-latest.outputs.hasNewVersion }}
     runs-on: ubuntu-latest
-    outputs:
-      CACHE_KEY: ${{ env.CACHE_KEY }}
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Update Dockerfile
-      run: make release
-    - name: Cache changes for testing
-      uses: actions/cache@v3
+      run: |
+        make release
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        path: ./*
-        key: ${{ env.CACHE_KEY }}
-  validate-build:
-    needs: [update]
-    uses: ./.github/workflows/test.yml
-    with:
-      cache-key: ${{ needs.update.outputs.CACHE_KEY }}
-    secrets: inherit
-  commit-changes:
-    needs: [validate-build, update]
-    runs-on: ubuntu-latest
-    steps:
-    - name: Cache changes for testing
-      uses: actions/cache@v3
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS }}
+    - name: Build and push
+      uses: docker/build-push-action@v3
       with:
-        path: ./*
-        key: ${{ env.CACHE_KEY }}
-    - name: Git Auto Commit
-      if: ${{ success()  }}
-      uses: stefanzweifel/git-auto-commit-action@v4.16.0
-      with:
-        commit_message: 'Latest'
-  deploy:
-    needs: [check-for-latest, update, validate-build, commit-changes]
-    if: ${{ needs.check-for-latest.outputs.hasNewVersion }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Push New Tags
-        run: |
-          docker push sethicis/frp-docker:latest
-          docker push sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
+        push: true
+        tags:
+          - sethicis/frp-docker:latest
+          - sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
