--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,4 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags:
-          - sethicis/frp-docker:latest
-          - sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
+        tags: sethicis/frp-docker:latest,sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
