--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,13 @@ jobs:
       with:
         push: true
         tags: sethicis/frp-docker:latest,sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
-    - name: Commit changes
-      if: ${{ success() }}
-      uses: stefanzweifel/git-auto-commit-action@v4.16.0
+    - name: Create Pull Request
+      id: cpr
+      uses: peter-evans/create-pull-request@v3
       with:
-        commit_message: Updated Dockerfile with FRP v${{ needs.check-for-latest.outputs.newVersion }}
+        commit-message: Updated Dockerfile with v${{ needs.check-for-latest.outputs.newVersion }}
+    - name: Enable Pull Request Automerge
+      if: steps.cpr.outputs.pull-request-operation == 'created'
+      uses: peter-evans/enable-pull-request-automerge@v2
+      with:
+        pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
