--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,8 @@
 name: Validate Dockerfile Build
 
 on:
+  pull_request:
+    types: [opened, reopened, synchronize]
   workflow_dispatch:
   workflow_call:
     inputs:
@@ -30,4 +32,5 @@ jobs:
         echo 'Failed to locate cache for given key'
         exit 1
     - name: Build Docker Image
+      if: ${{ success() }}
       run: docker build .
