--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron: '0 0 1 1/3 *'
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   check-for-latest:
     runs-on: ubuntu-latest
@@ -31,12 +34,14 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USER }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS }}
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push
       id: build-and-push
       uses: docker/build-push-action@v3
       with:
+        context: .
         push: true
         tags: sethicis/frp-docker:latest,sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
     - name: Create Pull Request
