--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  OWNER: sethicis
+  IMAGE_NAME: frp-docker
 
 jobs:
   check-for-latest:
@@ -43,7 +45,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: sethicis/frp-docker:latest,sethicis/frp-docker:${{ needs.check-for-latest.outputs.newVersion }}
+        tags: ${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.IMAGE_NAME}}:latest,${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.IMAGE_NAME }}:${{ needs.check-for-latest.outputs.newVersion }}
     - name: Create Pull Request
       if: ${{ success() }}
       id: cpr
