--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,7 @@ on:
   schedule:
     - cron: '0 0 1 1/3 *'
 
-env:
-  REGISTRY: ghcr.io
+env: 
   OWNER: sethicis
   IMAGE_NAME: frp-docker
 
@@ -36,7 +35,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push
@@ -45,7 +44,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.IMAGE_NAME}}:latest,${{ env.REGISTRY }}/${{ env.OWNER }}/${{ env.IMAGE_NAME }}:${{ needs.check-for-latest.outputs.newVersion }}
+        tags: ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ needs.check-for-latest.outputs.newVersion }}
     - name: Create Pull Request
       if: ${{ success() }}
       id: cpr
